--- a/product.html
+++ b/product.html
@@ -80,7 +80,7 @@
             companies innovate faster and build better product, using real user data and rapid iterations.
          </p>
          <div class="product__select">
-            <select id="selectProduct">
+            <select id="selectProduct" class="custom_Select">
                <option value="all">All Product</option>
                <option value="green">Veg</option>
                <option value="red">Non-Veg</option>
@@ -102,8 +102,96 @@
             </select>
          </div>
          <div class="product__list">
+            <div class="product__item best_Seller">
+               <a href="#" class="product__details"><i class="fa-light fa-arrow-up-right-from-square"></i></a>
+               <div class="product__img">
+                  <img src="images/Crab-Claw-Amritsari.png" alt="">
+               </div>
+               <div class="product__title">Crab Claws Amritsari</div>
+               <div class="product__price">
+                  <i class="fa-regular fa-indian-rupee-sign"></i><span>250.00</span>
+               </div>
+               <div class="product__size">
+                  <div class="product__size_item product__size_item--active">
+                     <span>250gm</span>
+                     <span>(16pcs)</span>
+                  </div>
+                  <div class="product__size_item">
+                     <span>250gm</span>
+                     <span>(16pcs)</span>
+                  </div>
+                  <div class="product__size_item">
+                     <span>250gm</span>
+                     <span>(16pcs)</span>
+                  </div>
+                  <div class="product__size_item">
+                     <span>250gm</span>
+                     <span>(16pcs)</span>
+                  </div>
+                  <div class="product__size_item product__size_item--off">
+                     <span>250gm</span>
+                     <span>(16pcs)</span>
+                  </div>
+               </div>
+               <div class="product__method">
+                  <div class="product__method_item">
+                     <i class="fa-light fa-pan-frying"></i>
+                     <span>Shallow Fry</span>
+                  </div>
+                  <div class="product__method_item">
+                     <i class="fa-light fa-grill-hot"></i>
+                     <span>Deep Fry</span>
+                  </div>
+                  <div class="product__method_item product__method_item--off">
+                     <i class="fa-light fa-microwave"></i>
+                     <span>Air Fry</span>
+                  </div>
+               </div>
+            </div>
             <div class="product__item">
-               <a href="#" class="product__details"></a>
+               <a href="#" class="product__details"><i class="fa-light fa-window-alt"></i></a>
+               <img src="" alt="" class="product__img">
+               <div class="product__title">Crab Claws Amritsari</div>
+               <div class="product__price"><i class="fal fa-rupees"></i><span>250.00</span></div>
+               <div class="product__size">
+                  <div class="product__size_item product__size_item--active">
+                     <span>250gm</span>
+                     <span>(16pcs)</span>
+                  </div>
+                  <div class="product__size_item">
+                     <span>250gm</span>
+                     <span>(16pcs)</span>
+                  </div>
+                  <div class="product__size_item">
+                     <span>250gm</span>
+                     <span>(16pcs)</span>
+                  </div>
+                  <div class="product__size_item">
+                     <span>250gm</span>
+                     <span>(16pcs)</span>
+                  </div>
+                  <div class="product__size_item product__size_item--off">
+                     <span>250gm</span>
+                     <span>(16pcs)</span>
+                  </div>
+               </div>
+               <div class="product__method">
+                  <div class="product__method_item">
+                     <i class="fal"></i>
+                     <span>Shallow Fry</span>
+                  </div>
+                  <div class="product__method_item">
+                     <i class="fal"></i>
+                     <span>Deep Fry</span>
+                  </div>
+                  <div class="product__method_item method__item--off">
+                     <i class="fal"></i>
+                     <span>Air Fry</span>
+                  </div>
+               </div>
+            </div>
+            <div class="product__item">
+               <a href="#" class="product__details"><i class="fa-light fa-window-alt"></i></a>
                <img src="" alt="" class="product__img">
                <div class="product__title">Crab Claws Amritsari</div>
                <div class="product__price"><i class="fal fa-rupees"></i><span>250.00</span></div>
