--- a/test.html
+++ b/test.html
@@ -38,6 +38,9 @@
             <span class="hero__tags_item">Frozen Food Product Distributors</span>
             <span class="hero__tags_item">HORECA Distributor</span>
          </div>
+         <div class="hero__toggle">
+            <i class="fa-duotone fa-address-card"></i>
+         </div>
       </div>
       <div class="hero__contact">
          <div class="hero__contact_action">
@@ -63,6 +66,7 @@
             <small>SM</small>
             <span>Sai Marketing</span>
          </a>
+         <span class="header__toggle"><i class="fa-regular fa-bars"></i></span>
          <nav class="header__nav">
             <a href="index.html" class="header__nav_link">About</a>
             <a href="product.html" class="header__nav_link header__nav_link--active">Product</a>
@@ -420,7 +424,7 @@
    <footer class="footer">
       <div class="container">
          <div class="footer__area">
-            <div class="footer__about area-about">
+            <div class="footer__about ">
                <h3 class="footer__head">About Sai Marketing</h3>
                <p class="footer__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis, earum
                   similique quasi vel
@@ -429,7 +433,7 @@
                   asperiores
                   quidem adipisci vero.</p>
             </div>
-            <div class="footer__address area-address">
+            <div class="footer__address ">
                <h3 class="footer__head">Address</h3>
                <p class="footer__para">Plot No. 71, Manohar Building,<br> H. K. Marg, Mazgaon, (Near Hamja Tower)<br>
                   Mumbai - 400010</p>
@@ -449,7 +453,7 @@
                   </a>
                </div>
             </div>
-            <div class="footer__bizhrs area-bizhrs">
+            <div class="footer__bizhrs ">
                <h3 class="footer__head">Business Hrs</h3>
                <p class="footer__para">
                   Monday - Saturday
@@ -460,9 +464,9 @@
                   <small>Closed</small>
                </p>
             </div>
-            <div class="footer__copy area-copy">
-               Copyright © 2023. Sai Marketing. All rights reserved.
-            </div>
+         </div>
+         <div class="footer__copy ">
+            Copyright © 2023. Sai Marketing. All rights reserved.
          </div>
       </div>
    </footer>
