--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
+   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
    <meta name="description" content="This is a meta description sample. We can add up to 160 characters.">
    <link rel="canonical" href="http://example.com/" />
    <meta name=" robots" content=" index, follow">
@@ -18,7 +20,59 @@
 </head>
 
 <body>
-
+   <!-- *HERO* -->
+   <section class="hero">
+      <div class="hero__info">
+         <small class="hero__label">Welcome to</small>
+         <h1 class="hero__title">Sai Marketing</h1>
+         <div class="hero__rating">
+            <span class="hero__rating_icon">
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star-half-stroke"></i>
+               <i class="fa-regular fa-star"></i>
+            </span>
+            <span class="hero__rating_txt">4.5 / 5</span>
+         </div>
+         <div class="hero__tags">
+            <span class="hero__tags_item">Cold Storage Services</span>
+            <span class="hero__tags_item">Frozen Food Product Distributors</span>
+            <span class="hero__tags_item">HORECA Distributor</span>
+         </div>
+      </div>
+      <div class="hero__contact">
+         <div class="hero__contact_action">
+            <a href="mailto:sairam.sr389@gmail.com" class="hero__contact_link">
+               <i class="fa-light fa-envelope"></i>
+               <span>sairam.sr389@gmail.com</span>
+            </a>
+            <a href="tel:+919324206327" class="hero__contact_link">
+               <i class="fa-light fa-phone"></i>
+               <span>+91 9324206327</span>
+            </a>
+            <a href="https://maps.app.goo.gl/5WCviWKSQe7GWZ136" class="hero__contact_link">
+               <i class="fa-light fa-map-marker-alt"></i>
+               <span>Mazgaon, Mumbai</span>
+            </a>
+         </div>
+      </div>
+   </section>
+   <!-- *HEADER* -->
+   <header class="header">
+      <div class="container">
+         <a href="javascript:void(0)" class="header__brand">
+            <small>SM</small>
+            <span>Sai Marketing</span>
+         </a>
+         <span class="header__toggle"><i class="fa-regular fa-bars"></i></span>
+         <nav class="header__nav">
+            <a href="index.html" class="header__nav_link header__nav_link--active">About</a>
+            <a href="product.html" class="header__nav_link">Product</a>
+            <a href="contact.html" class="header__nav_link">Contact</a>
+         </nav>
+      </div>
+   </header>
    <!-- *ABOUT* -->
    <section class="about">
       <div class="container">
@@ -45,7 +99,57 @@
          </div>
       </div>
    </section>
-
+   <!-- *FOOTER* -->
+   <footer class="footer">
+      <div class="container">
+         <div class="footer__area">
+            <div class="footer__about ">
+               <h3 class="footer__head">About Sai Marketing</h3>
+               <p class="footer__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis, earum
+                  similique quasi vel
+                  molestiae
+                  veniam facere enim explicabo mollitia perspiciatis, laboriosam dolore. Eaque sed eveniet, soluta
+                  asperiores
+                  quidem adipisci vero.</p>
+            </div>
+            <div class="footer__address ">
+               <h3 class="footer__head">Address</h3>
+               <p class="footer__para">Plot No. 71, Manohar Building,<br> H. K. Marg, Mazgaon, (Near Hamja Tower)<br>
+                  Mumbai - 400010</p>
+               <p class="footer__para">GSTIN - 27ALGPD5253P1ZR</P>
+               <div class="footer__social">
+                  <a href="javascript:void(0)" class="footer__social_link">
+                     <i class="fa-brands fa-facebook-square"></i>
+                  </a>
+                  <a href="javascript:void(0)" class="footer__social_link">
+                     <i class="fa-brands fa-twitter-square"></i>
+                  </a>
+                  <a href="javascript:void(0)" class="footer__social_link">
+                     <i class="fa-brands fa-linkedin"></i>
+                  </a>
+                  <a href="javascript:void(0)" class="footer__social_link">
+                     <i class="fa-brands fa-whatsapp-square"></i>
+                  </a>
+               </div>
+            </div>
+            <div class="footer__bizhrs ">
+               <h3 class="footer__head">Business Hrs</h3>
+               <p class="footer__para">
+                  Monday - Saturday
+                  <small>(09:00 am - 07:00 pm)</small>
+               </p>
+               <p class="footer__para">
+                  Sunday
+                  <small>Closed</small>
+               </p>
+            </div>
+         </div>
+         <div class="footer__copy ">
+            Copyright © 2023. Sai Marketing. All rights reserved.
+         </div>
+      </div>
+   </footer>
+   <script src="js/main.js"></script>
 </body>
 
 </html>
