--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,59 @@
 </head>
 
 <body>
+   <!-- *HERO* -->
+   <section class="hero">
+      <div class="hero__info">
+         <small class="hero__label">Welcome to</small>
+         <h1 class="hero__title">Sai Marketing</h1>
+         <div class="hero__rating">
+            <span class="hero__rating_icon">
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star-half-stroke"></i>
+               <i class="fa-regular fa-star"></i>
+            </span>
+            <span class="hero__rating_txt">4.5 / 5</span>
+         </div>
+         <div class="hero__tags">
+            <span class="hero__tags_item">Cold Storage Services</span>
+            <span class="hero__tags_item">Frozen Food Product Distributors</span>
+            <span class="hero__tags_item">HORECA Distributor</span>
+         </div>
+      </div>
+      <div class="hero__contact">
+         <div class="hero__contact_action">
+            <a href="mailto:sairam.sr389@gmail.com" class="hero__contact_link">
+               <i class="fa-light fa-envelope"></i>
+               <span>sairam.sr389@gmail.com</span>
+            </a>
+            <a href="tel:+919324206327" class="hero__contact_link">
+               <i class="fa-light fa-phone"></i>
+               <span>+91 9324206327</span>
+            </a>
+            <a href="https://maps.app.goo.gl/5WCviWKSQe7GWZ136" class="hero__contact_link">
+               <i class="fa-light fa-map-marker-alt"></i>
+               <span>Mazgaon, Mumbai</span>
+            </a>
+         </div>
+      </div>
+   </section>
+   <!-- *HEADER* -->
+   <header class="header">
+      <div class="container">
+         <a href="javascript:void(0)" class="header__brand">
+            <small>SM</small>
+            <span>Sai Marketing</span>
+         </a>
+         <span class="header__toggle"><i class="fa-regular fa-bars"></i></span>
+         <nav class="header__nav">
+            <a href="index.html" class="header__nav_link">About</a>
+            <a href="product.html" class="header__nav_link ">Product</a>
+            <a href="contact.html" class="header__nav_link header__nav_link--active">Contact</a>
+         </nav>
+      </div>
+   </header>
    <!-- *CONTACT* -->
    <section class="contact">
       <div class="container">
@@ -55,20 +108,71 @@
    <!-- *MAP* -->
    <section class="map">
       <div class="map__office">
-         <div class="map__head">Our Office</div>
+         <div class="map__head"><i class="fa-regular fa-building"></i> Our Office</div>
          <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3773.2447597147684!2d72.83786907583581!3d18.964794955453044!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7cf5ceab18ef1%3A0x3a8bd57ee6c4e017!2sSai%20Marketing%20Office!5e0!3m2!1sen!2sin!4v1700565918728!5m2!1sen!2sin"
             width="100%" height="450" allowfullscreen="no" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
       <div class="map__factory">
-         <div class="map__head">Our Cold Storage</div>
+         <div class="map__head"> <i class="fa-regular fa-temperature-snow"></i> Our Cold Storage</div>
          <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3773.2447597147684!2d72.83786907583581!3d18.964794955453044!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7cf5ceab18ef1%3A0x3a8bd57ee6c4e017!2sSai%20Marketing%20Office!5e0!3m2!1sen!2sin!4v1700565918728!5m2!1sen!2sin"
             width="100%" height="450" allowfullscreen="no" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
    </section>
+   <!-- *FOOTER* -->
+   <footer class="footer">
+      <div class="container">
+         <div class="footer__area">
+            <div class="footer__about ">
+               <h3 class="footer__head">About Sai Marketing</h3>
+               <p class="footer__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis, earum
+                  similique quasi vel
+                  molestiae
+                  veniam facere enim explicabo mollitia perspiciatis, laboriosam dolore. Eaque sed eveniet, soluta
+                  asperiores
+                  quidem adipisci vero.</p>
+            </div>
+            <div class="footer__address ">
+               <h3 class="footer__head">Address</h3>
+               <p class="footer__para">Plot No. 71, Manohar Building,<br> H. K. Marg, Mazgaon, (Near Hamja Tower)<br>
+                  Mumbai - 400010</p>
+               <p class="footer__para">GSTIN - 27ALGPD5253P1ZR</P>
+               <div class="footer__social">
+                  <a href="javascript:void(0)" class="footer__social_link">
+                     <i class="fa-brands fa-facebook-square"></i>
+                  </a>
+                  <a href="javascript:void(0)" class="footer__social_link">
+                     <i class="fa-brands fa-twitter-square"></i>
+                  </a>
+                  <a href="javascript:void(0)" class="footer__social_link">
+                     <i class="fa-brands fa-linkedin"></i>
+                  </a>
+                  <a href="https://wa.me/9324206327" class="footer__social_link">
+                     <i class="fa-brands fa-whatsapp-square"></i>
+                  </a>
+               </div>
+            </div>
+            <div class="footer__bizhrs ">
+               <h3 class="footer__head">Business Hrs</h3>
+               <p class="footer__para">
+                  Monday - Saturday
+                  <small>(09:00 am - 07:00 pm)</small>
+               </p>
+               <p class="footer__para">
+                  Sunday
+                  <small>Closed</small>
+               </p>
+            </div>
+         </div>
+         <div class="footer__copy ">
+            Copyright © 2023. Sai Marketing. All rights reserved.
+         </div>
+      </div>
+   </footer>
+   <script src="js/main.js"></script>
 </body>
 
 </html>
